# graduation_project

./: .gitignore  README.md
bysj_client/: README.md  apprcc.qrc  apprcc_rc.py  main.py
bysj_client/config/: config.py
bysj_client/myutil/: global_var.py  logs.py  ssh_diver.py
bysj_client/win/: main_win.py
pyqt5_client/: README.md  apprcc.qrc  apprcc_rc.py  bulid.bat  file_verison_info.txt  main.py  语音增强客户端.spec
pyqt5_client/config/: config.py
pyqt5_client/core/: MatplotlibWidget.py
pyqt5_client/myutil/: logs.py  mysql_diver.py
pyqt5_client/speech_enhancement_core/SEGAN/: SEGAN.py
pyqt5_client/speech_enhancement_core/pytorch_SEGAN/: use.py
pyqt5_client/speech_enhancement_core/specsub/: sub_spec.py
pyqt5_client/ui/: about_frame.py  about_frame.ui  help_frame.py  help_frame.ui  main.py  main.ui  sound_recording_frame.py  sound_recording_frame.ui
pyqt5_client/win/: about_form.py  help_form.py  main_win.py  sound_recording_form.py
speech_enhancement_core/pytorch_SEGAN_package/: file_verison_info.txt  readme.md  use.py  use.spec
speech_enhancement_core/pytorch_SEGAN_package/SEGAN/: dataset.py  eval.py  train.py
speech_enhancement_core/pytorch_SEGAN_package/pytorch_SEGAN/: CMakeLists.txt  pytorch_SEGAN.cpp  pytorch_SEGAN.h
speech_enhancement_core/pytorch_SEGAN_package/pytorch_to_torchscript/: a.py
speech_enhancement_core/pytorch_SEGAN_package/pytorch_to_torchscript/SEGAN/: data_geneation.py  hparams.py
speech_enhancement_core/specsub_package/: sub_spec.py
打包安装文件/: lience.rtf  打包安装文件.ifp
